tests/errors/empty_use_path.drast
// # TEST: empty use path is rejected
// # EXPECT: error
// # ERROR_CONTAINS: empty use path

use

main, int
	return 0
